# pragma-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
benchmarks_run/: _clear_cache.py  apple.txt  large_corpus.py  run.py  run_large.py
docs/: api-reference.md  formats.md  index.md  providers.md  quickstart.md  quickstart_colab.ipynb
docs/comparisons/: vs-graphrag.md  vs-rag.md
docs/concepts/: atomic-facts.md  index.md  knowledge-graph.md  reasoning.md
pragma/: __init__.py  config.py  exceptions.py  kb.py  models.py  user_config.py
pragma/cli/: __init__.py  connect.py  main.py
pragma/eval/: __init__.py  evaluator.py
pragma/graph/: __init__.py  builder.py  resolver.py  traversal.py
pragma/ingestion/: __init__.py  extractor.py  loader.py  preprocessor.py
pragma/ingestion/loaders/: __init__.py  csv.py  docx.py  html.py  json.py  pdf.py  text.py
pragma/llm/: __init__.py  anthropic.py  base.py  groq.py  inception.py  ollama.py  openai.py
pragma/prompts/: __init__.py  fact_extraction.txt  query_decompose.txt  synthesis.txt
pragma/query/: __init__.py  assembler.py  decomposer.py  multihop.py  retriever.py  synthesizer.py
pragma/storage/: __init__.py  sqlite.py
pragma/storage/migrations/: 001_initial.sql  __init__.py
tests/benchmarks/: test_ingestion.py  test_multihop.py  test_token_efficiency.py
tests/fixtures/: companies.csv  companies.json  companies.txt
tests/integration/: test_workflows.py
tests/unit/: test_assembler.py  test_assembler_coverage.py  test_builder.py  test_cli.py  test_config.py  test_connect.py  test_decomposer.py  test_enhancements.py  test_errors.py  test_extractor.py  test_kb.py  test_large_benchmark.py  test_list_models.py  test_llm.py  test_llm_coverage.py  test_loaders.py  test_models.py  test_multihop_resolver.py  test_preprocessor.py  test_query.py  test_resolver.py  test_retriever.py  test_storage.py  test_streaming.py  test_synthesizer.py  test_temporal.py  test_traversal.py  test_user_config.py
